; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_intel_gmbus.c_gma_intel_gmbus_set_speed.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_intel_gmbus.c_gma_intel_gmbus_set_speed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_adapter = type { i32 }
%struct.intel_gmbus = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gma_intel_gmbus_set_speed(%struct.i2c_adapter* %0, i32 %1) #0 {
  %3 = alloca %struct.i2c_adapter*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.intel_gmbus*, align 8
  store %struct.i2c_adapter* %0, %struct.i2c_adapter** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.i2c_adapter*, %struct.i2c_adapter** %3, align 8
  %7 = call %struct.intel_gmbus* @to_intel_gmbus(%struct.i2c_adapter* %6)
  store %struct.intel_gmbus* %7, %struct.intel_gmbus** %5, align 8
  %8 = load %struct.intel_gmbus*, %struct.intel_gmbus** %5, align 8
  %9 = getelementptr inbounds %struct.intel_gmbus, %struct.intel_gmbus* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = and i32 %10, -769
  %12 = load i32, i32* %4, align 4
  %13 = shl i32 %12, 8
  %14 = or i32 %11, %13
  %15 = load %struct.intel_gmbus*, %struct.intel_gmbus** %5, align 8
  %16 = getelementptr inbounds %struct.intel_gmbus, %struct.intel_gmbus* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  ret void
}

declare dso_local %struct.intel_gmbus* @to_intel_gmbus(%struct.i2c_adapter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
